# y-window

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  startY.devel.in
Y/: Makefile.am  Makefile.in  Makefile.ymk  const.h  setup.h  setup.h.in  y.h
Y/buffer/: buffer.c  buffer.h  bufferclass.h  bufferio.c  bufferio.h  painter.c  painter.h  painterclass.h  rgbabuffer.c  rgbabuffer.h
Y/input/: keyboard.c  keyboard.h  keymap.c  keymap.h  pointer.c  pointer.h  ykb.c  ykb.h  ykbmap.c  ykbmap.h  ykbmap_p.h
Y/main/: config.c  y.c
Y/message/: client.c  client.h  client_p.h  message.c  message.h  tuple.c  tuple.h
Y/modules/: module.c  theme.c  theme.h  theme_interface.h  videodriver_interface.h  windowmanager.c  windowmanager.h  windowmanager_interface.h
Y/object/: class.c  class.h  class_p.h  object.c  object.h  object_p.h
Y/screen/: hwrenderer.c  hwrenderer.h  renderer.c  renderer.h  rendererclass.h  screen.c  screen.h  simplerenderer.c  simplerenderer.h  swrenderer.c  swrenderer.h  viewport.c  viewport.h
Y/text/: font.c
Y/util/: colour.c  colour.h  index_check.c  llist.c  llist.h  pqueue_check.c  rbtree.c  rbtree.h  rbtree_check.c  rectangle.c  rectangle.h  yutil.c  yutil.h
Y/widget/: button.c  button.h  canvas.c  canvas.h  checkbox.c  checkbox.h  console.c  console.h  desktop.c  desktop.h  gridlayout.c  gridlayout.h  label.c  label.h  menu.c  menu.h  widget.c  widget.h  widget_p.h  window.c  window.h
autoconf/: libiterm.m4  libsdl.m4
build-misc/: yclpp
clients/: Makefile.in  clients.mk
clients/calculator/: Makefile.in  calculator.cc  calculator.h
clients/clock/: Makefile.in  clock.cc  clock.h
clients/sample/: Makefile.in  sample.cc  sample.h
clients/terminal/: Makefile.in  terminal.cc  terminal.h
clients/tools/: Makefile.in  startY.in
config/: Makefile.in  server.conf
config/keymaps/: Makefile.am  Makefile.in  gb.ykb  ykbcomp.in
config/keymaps/YKB/: YKB.pm  YKBGrammar  YKM.pm
data/: Makefile.am  Makefile.in
doc/: Makefile.in
libYc++/: Makefile.am  Makefile.in  Versions
libYc++/Y/: c++.h
libYc++/Y/c++/: button.cc  button.h  canvas.cc  canvas.h  checkbox.cc  checkbox.h  class.cc  class.h  connection.cc  connection.h  connection_tcp.cc  connection_unix.cc  console.cc  console.h  gridlayout.cc  gridlayout.h  label.cc  label.h  menu.cc  menu.h  message.cc  message.h  object.cc  object.h  reply.cc  reply.h  thread_support.cc  thread_support.h  ticker.cc  ticker.h  timer.cc  timer.h  widget.h  window.cc  window.h
modules/: Makefile.in  module.mk
modules/drivers/: Makefile.am  Makefile.in
modules/drivers/input/: Makefile.in
modules/drivers/input/evdev/: Makefile.in  evdev.c
modules/drivers/ipc/: Makefile.am  Makefile.in
modules/drivers/ipc/tcp/: Makefile.am  Makefile.in  tcp.c
modules/drivers/ipc/unix/: Makefile.am  Makefile.in  unix.c
modules/drivers/video/: Makefile.am  Makefile.in
modules/drivers/video/fbdev/: Makefile.am  Makefile.in  fbdev.c
modules/drivers/video/sdl/: Makefile.am  Makefile.in  sdl.c
modules/themes/: Makefile.in
modules/themes/basic/: Makefile.am  Makefile.in  basic.c  draw.c  draw.h  font.c  font.h  window.c  window.h
modules/wm/: Makefile.in
modules/wm/default/: Makefile.in  default.c
