include $(top_srcdir)/build-misc/common.mk
include Makefile.ymk

bin_PROGRAMS = Y
Y_SOURCES = \
buffer/buffer.c \
buffer/bufferio.c \
buffer/rgbabuffer.c \
buffer/painter.c \
modules/theme.c \
modules/windowmanager.c \
main/control.c \
main/paths.c \
main/y.c \
main/config.c \
message/client.c \
message/message.c \
message/tuple.c \
util/colour.c \
util/dbuffer.c \
util/index.c \
util/log.c \
util/rectangle.c \
util/rbtree.c \
util/yutil.c \
util/pqueue.c \
util/llist.c \
util/zorder.c \
input/keyboard.c \
input/pointer.c \
input/keymap.c \
input/ykb.c \
input/ykbmap.c \
text/font.c \
object/class.c \
screen/renderer.c \
screen/hwrenderer.c \
screen/swrenderer.c \
screen/simplerenderer.c \
screen/viewport.c \
$(Y_class_sources)

noinst_HEADERS = \
buffer/buffer.h \
buffer/bufferio.h \
buffer/bufferclass.h \
buffer/rgbabuffer.h \
buffer/painter.h \
buffer/painterclass.h \
modules/module.h \
modules/videodriver_interface.h \
modules/module_interface.h \
modules/windowmanager_interface.h \
modules/windowmanager.h \
modules/theme.h \
modules/theme_interface.h \
main/control.h \
main/config.h \
message/client.h \
message/client_p.h \
message/message.h \
message/parse_support.h \
message/tuple.h \
util/check.h \
util/colour.h \
util/dbuffer.h \
util/index.h \
util/rectangle.h \
util/rbtree.h \
util/yutil.h \
util/pqueue.h \
util/llist.h \
util/zorder.h \
util/log.h \
widget/widget.h \
widget/widget_p.h \
widget/window.h \
widget/desktop.h \
widget/label.h \
widget/gridlayout.h \
widget/button.h \
widget/canvas.h \
widget/console.h \
widget/checkbox.h \
widget/menu.h \
input/keyboard.h \
input/pointer.h \
input/keymap.h \
input/ykb.h \
input/ykbmap.h \
input/ykbmap_p.h \
text/font.h \
object/class.h \
object/class_p.h \
object/object.h \
object/object_p.h \
screen/renderer.h \
screen/rendererclass.h \
screen/screen.h \
screen/hwrenderer.h \
screen/swrenderer.h \
screen/simplerenderer.h \
screen/viewport.h \
y.h \
setup.h 

TESTS = \
util/index_check \
util/rbtree_check \
util/pqueue_check \
util/rectangle_check

check_PROGRAMS = $(TESTS)

util_index_check_SOURCES = util/index_check.c util/index.c util/yutil.c util/log.c

util_rbtree_check_SOURCES = util/rbtree_check.c util/rbtree.c util/yutil.c util/log.c

util_pqueue_check_SOURCES = util/pqueue_check.c util/pqueue.c util/yutil.c util/log.c

util_rectangle_check_SOURCES = util/rectangle_check.c util/rectangle.c \
 util/yutil.c util/llist.c util/log.c

Y_LDFLAGS = -Wl,-export-dynamic
Y_LDADD = $(FREETYPE_LIBS) $(LIBPNG_LIBS) -ldl

INCLUDES += $(FREETYPE_CPPFLAGS) $(LIBPNG_CFLAGS) -I.ycl

pkginclude_HEADERS = \
        const.h

MAINTAINERCLEANFILES = $(srcdir)/Makefile.ycl
CLEANFILES += main/paths.tab main/treeinfo.h $(Y_class_files)
BUILT_SOURCES = main/paths.tab main/treeinfo.h $(Y_class_files)

main/paths.tab: Makefile
	@echo "Creating paths.tab"
	@echo "/* Generated by Makefile on" > $@
	@date >> $@
	@echo " */" >> $@
	@echo >> $@
	@echo "#define PREFIX \"$(prefix)\"" >> $@
	@echo "#define EXEC_PREFIX \"$(exec_prefix)\"" >> $@
	@echo "#define BINDIR \"$(bindir)\"" >> $@
	@echo "#define SBINDIR \"$(sbindir)\"" >> $@
	@echo "#define DATADIR \"$(datadir)\"" >> $@
	@echo "#define SYSCONFDIR \"$(sysconfdir)\"" >> $@
	@echo "#define LOCALSTATEDIR \"$(localstatedir)\"" >> $@
	@echo "#define PKGLIBDIR \"$(pkglibdir)\"" >> $@

main/treeinfo.h: Makefile
	$(top_srcdir)/build-misc/gentreeinfo -r $(top_srcdir) -o $@

Makefile.ymk: @MAINTAINER_MODE_TRUE@ Makefile.ycl $(top_srcdir)/build-misc/yclmakemake
	$(top_srcdir)/build-misc/yclmakemake -o $@ $(srcdir)/Makefile.ycl

yclpp = $(top_srcdir)/build-misc/yclpp
